--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing-launchpad01</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="open-sans-normal">
+  <header class="header  ">
+    <nav>
+      <h3 class="logo-design">LOGO</h3>
+      <ul>
 
+        <li><a href=""><button class=" btn-primary">Sign Up</button> </a></li>
+      </ul>
+    </nav>
+    <div class="banner">
+
+      <h1 class="banner-title">Cool Dark UI Template for<br>
+        Webflow Agencies!
+      </h1>
+
+      <button class="btn-primary">Stay Focused</button>
+
+    </div>
 </body>
 
 </html>
