added body section

--- a/index.html
+++ b/index.html
@@ -13,23 +13,156 @@
 </head>
 
 <body class="open-sans-normal">
-  <header class="header  ">
-    <nav>
-      <h3 class="logo-design">LOGO</h3>
-      <ul>
 
-        <li><a href=""><button class=" btn-primary">Sign Up</button> </a></li>
-      </ul>
-    </nav>
-    <div class="banner">
+  <div class="main-bg">
+    <header>
+      <div class="header-container">
+        <p class="logo">Logo</p>
+        <button class="btn-primary">Sign Up</button>
+      </div>
+    </header>
+    <section class="hero">
+      <div class="hero-content">
+        <h1 class="hero-title">Cool Dark UI Template for <br> Webflow Agencies!</h1>
+        <button class="btn-primary">Stay Focused</button>
+      </div>
+    </section>
+  </div>
 
-      <h1 class="banner-title">Cool Dark UI Template for<br>
-        Webflow Agencies!
-      </h1>
+  <!-- action -->
+  <section class="action">
+    <div class="action-content">
+      <h1 class="action-title">See It in Action</h1>
+      <p class="action-des">Explore the live preview and imagine your brand in this bold new look.</p>
+      <button class="btn-primary">Launch Live Preview</button>
+    </div>
+    <img src="Assets/wc-mini.png" alt="" class="action-img">
+  </section>
 
-      <button class="btn-primary">Stay Focused</button>
+  <!-- state -->
+  <section class="stats-section">
+    <h1 class="state-title">Joined Thousands of Productive Users</h1>
+    <div class="states">
+      <div class="state-card">
+        <p class="amount">50K</p>
+        <p class="des">Active Users</p>
+      </div>
+      <div class="state-card">
+        <p class="amount">2M+</p>
+        <p class="des">Focus Sessions</p>
+      </div>
+      <div class="state-card">
+        <p class="amount">95%</p>
+        <p class="des">Satisfaction Rate</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- rating -->
+  <section class="ratings">
+    <h3 class="rating-title">What our users say</h3>
+    <div class="ratings-container">
+      <div class="rating-card">
+        <div class="star">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+        </div>
+        <h1 class="ratings-title">Loved by Designers</h1>
+        <p class="ratings-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+        <div class="reviewer">
+          <img src="Assets/avatar.png" class="reviewer-avatar" alt="">
+          <div class="reviewer-info">
+            <div class="reviewer-name">Reviewer name</div>
+            <div class="reviewer-date">Date</div>
+          </div>
+        </div>
+      </div>
+      <div class="rating-card">
+        <div class="star">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+        </div>
+        <h1 class="ratings-title">Loved by Designers</h1>
+        <p class="ratings-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+        <div class="reviewer">
+          <img src="Assets/avatar.png" class="reviewer-avatar" alt="">
+          <div class="reviewer-info">
+            <div class="reviewer-name">Reviewer name</div>
+            <div class="reviewer-date">Date</div>
+          </div>
+        </div>
+      </div>
+      <div class="rating-card">
+        <div class="star">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+          <img src="Assets/icon-star.png" alt="">
+        </div>
+        <h1 class="ratings-title">Loved by Designers</h1>
+        <p class="ratings-description">This template instantly leveled up our presence.” – Studio Vertex</p>
+        <div class="reviewer">
+          <img src="Assets/avatar.png" alt="" class="reviewer-avatar">
+          <div class="reviewer-info">
+            <div class="reviewer-name">Reviewer name</div>
+            <div class="reviewer-date">Date</div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
+  </section>
+
+  <!-- cta -->
+  <section class="cta-section">
+    <h2 class="cta-title">Ready to focus better</h2>
+    <p class="cta-description">This template instantly leveled up our presence." – Studio Vertex</p>
+    <button class="btn-primary cta-button">Get Started Free</button>
+    <img src="Assets/wc-big.png" class="cta-image" alt="">
+  </section>
+
+  <!-- contact form -->
+  <!--<section class="contact-section">
+    <h2 class="section-title">Let’s Get in <br> Touch</h2>
+    <form class="contact-form">
+      <div class="form-group">
+        <label class="form-label">Email</label>
+        <input type="email" class="input-form" placeholder="enteryourmail@mail.com">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Name</label>
+        <input type="text" class="input-form" placeholder="full name">
+      </div>
+      <div class="form-group">
+        <label class="form-label">Message</label>
+        <textarea class="textarea" placeholder="write your message...."></textarea>
+      </div>
+      <button class="btn-primary">Get In Touch</button>
+    </form>
+  </section>-->
+
+  <!-- Footer -->
+  <!--<footer class="footer">
+    <div class="footer-content">
+      <div class="footer-logo">LOGO</div>
+      <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and
+        discover how we can bring your vision to life.</p>
+      <nav class="footer-nav">
+        <a href="#" class="footer-link">Home</a>
+        <a href="#" class="footer-link">About</a>
+        <a href="#" class="footer-link">How it Works</a>
+        <a href="#" class="footer-link">Services</a>
+      </nav>
+    </div>
+  </footer>-->
 </body>
 
 </html>
