added in footer section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   </section>
 
   <!-- contact form -->
-  <!--<section class="contact-section">
+  <section class="contact-section">
     <h2 class="section-title">Let’s Get in <br> Touch</h2>
     <form class="contact-form">
       <div class="form-group">
@@ -147,10 +147,10 @@
       </div>
       <button class="btn-primary">Get In Touch</button>
     </form>
-  </section>-->
+  </section>
 
   <!-- Footer -->
-  <!--<footer class="footer">
+  <footer class="footer">
     <div class="footer-content">
       <div class="footer-logo">LOGO</div>
       <p class="footer-description">Ready to elevate your online presence? Contact us today to discuss your project and
@@ -162,7 +162,7 @@
         <a href="#" class="footer-link">Services</a>
       </nav>
     </div>
-  </footer>-->
+  </footer>
 </body>
 
 </html>
